--- a/templates/components/common/header.html
+++ b/templates/components/common/header.html
@@ -53,5 +53,6 @@
     <div class="navPages-container" id="menu" data-menu {{#if theme_settings.header_sticky}}data-stickymenu{{/if}}>
         {{> components/common/navigation-menu}}
     </div>
+    {{{region name="header_navigation_bottom--global"}}}
     <div class="navPages-container-overlay"></div>
 </header>
