--- a/templates/pages/product.html
+++ b/templates/pages/product.html
@@ -19,6 +19,12 @@ product:
     <div itemscope itemtype="http://schema.org/Product" class="jam" oncopy="return false" oncut="return false" onpaste="return false">
         {{> components/products/product-view schema=true}}
 
+        {{{region name="product_below_content"}}}
+
+        {{#if product.videos.list.length}}
+            {{> components/products/videos product.videos}}
+        {{/if}}
+
         {{#if settings.show_product_reviews}}
         {{#if product.reviews.total '>' 0}}
             <div class="productView-reviewTabs">
