--- a/templates/components/common/header-laparis2.html
+++ b/templates/components/common/header-laparis2.html
@@ -43,6 +43,7 @@
         <div class="navPages-container" id="menu" data-menu>
             {{> components/common/navigation-menu}}
         </div>
+        {{{region name="header_navigation_bottom--global"}}}
     </div>
 
     
