--- a/templates/pages/brands.html
+++ b/templates/pages/brands.html
@@ -8,6 +8,7 @@ brands:
 
 <main class="page">
     <h1 class="page-heading">{{lang 'brand.label'}}</h1>
+    {{{region name="brands_below_header"}}}
     <ul class="brandGrid">
         {{#each brands}}
             <li class="brand">
@@ -27,6 +28,7 @@ brands:
         {{/each}}
     </ul>
     {{> components/common/paginator pagination.brands}}
+    {{{region name="brands_below_content"}}}
 </main>
 {{/partial}}
 {{> layout/base}}
