--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -148,6 +148,7 @@ product_results:
         <div id="product-listing-container" {{#if forms.search.section '!=' 'product'}}class="u-hiddenVisually"{{/if}}>
             {{> components/search/product-listing}}
         </div>
+        {{{region name="search_below_content"}}}
     </main>
 </section>
 
